--- a/client/package.json
+++ b/client/package.json
@@ -7,43 +7,55 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run client:serve-ssr",
+    "serve:ssr": "node dist/client/server/main.js",
+    "build:ssr": "ng build --prod && ng run client:server:production",
+    "prerender": "ng run client:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.7",
-    "@angular/common": "~11.2.7",
-    "@angular/compiler": "~11.2.7",
-    "@angular/core": "~11.2.7",
-    "@angular/forms": "~11.2.7",
-    "@angular/platform-browser": "~11.2.7",
-    "@angular/platform-browser-dynamic": "~11.2.7",
-    "@angular/router": "~11.2.7",
+    "@angular/animations": "~11.2.9",
+    "@angular/common": "~11.2.9",
+    "@angular/compiler": "~11.2.9",
+    "@angular/core": "~11.2.9",
+    "@angular/forms": "~11.2.9",
+    "@angular/platform-browser": "~11.2.9",
+    "@angular/platform-browser-dynamic": "~11.2.9",
+    "@angular/platform-server": "~11.2.9",
+    "@angular/router": "~11.2.9",
+    "@angular/service-worker": "~11.2.9",
+    "@nguniversal/express-engine": "^11.2.1",
     "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.6.0",
+    "express": "^4.15.2",
+    "http-proxy-middleware": "^1.1.0",
     "ng-recaptcha": "^7.0.1",
     "ngx-oauth": "^0.5.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "rxjs": "~6.6.7",
+    "send-seekable": "^1.0.4",
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular/cli": "~11.2.6",
-    "@angular/compiler-cli": "~11.2.7",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "@angular-devkit/build-angular": "~0.1102.8",
+    "@angular/cli": "~11.2.8",
+    "@angular/compiler-cli": "~11.2.9",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "~3.6.9",
+    "@types/node": "^14.14.37",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "ts-node": "~9.1.1",
+    "tslint": "~6.1.3",
     "typescript": "~4.1.5"
   }
 }
